--- a/SPMS/Areas/Graduate/Views/Dashboard/Index.cshtml
+++ b/SPMS/Areas/Graduate/Views/Dashboard/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     ViewData["Title"] = "Dashboard";
-    var students = ViewData["students"] as Student;
+    var students = ViewData["projects"] as Student;
     var chapters = ViewData["chapters"] as IEnumerable<Chapter>;
 }
 
