--- a/SPMS/Areas/Graduate/Views/Shared/_Layout.cshtml
+++ b/SPMS/Areas/Graduate/Views/Shared/_Layout.cshtml
@@ -94,6 +94,7 @@
     <script src="~/assets/js/custom.min.js"></script>
     <script src="~/assets/js/dlabnav-init.js"></script>
     <script src="~/assets/js/demo.js"></script>
+    <script src="~/assets/js/myscripts.js"></script>
     @*<script src="~/assets/js/styleSwitcher.js"></script>*@
     @await Component.InvokeAsync("Notyf")
     @await RenderSectionAsync("Scripts", required: false)
