--- a/SPMS/Views/Shared/_Sidebar.cshtml
+++ b/SPMS/Views/Shared/_Sidebar.cshtml
@@ -178,7 +178,7 @@ else if (User.IsInRole("Student"))
                         <span class="nav-text">Chat</span>
                     </a>
                     <ul aria-expanded="false">
-                        <li><a asp-controller="chat" asp-action="index"></a></li>
+                        <li><a asp-controller="chat" asp-action="index">Chat Group</a></li>
 
                         <li>
                             <ul aria-expanded="false">
