--- a/SPMS/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/SPMS/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -44,10 +44,6 @@
 	</div>
 
 	<script src="~/assets/vendor/global/global.min.js"></script>
-	<script src="~/assets/vendor/chart.js/Chart.bundle.min.js"></script>
-	<!-- Apex Chart -->
-	<script src="~/assets/vendor/apexchart/apexchart.js"></script>
-	
 	<!-- Datatable -->
 	<script src="~/assets/vendor/datatables/js/jquery.dataTables.min.js"></script>
 	<script src="~/assets/js/plugins-init/datatables.init.js"></script>
@@ -56,7 +52,7 @@
 	<script src="~/assets/js/custom.min.js"></script>
 	<script src="~/assets/js/dlabnav-init.js"></script>
 	<script src="~/assets/js/demo.js"></script>
-	<script src="~/js\loading.js"></script>
+	<script src="~/assets/js/myscripts.js"></script>
 	 <script>
 	// Check that service workers are supported
 	if ('serviceWorker' in navigator) {
