--- a/SPMS/Areas/Staff/Views/Shared/_Layout.cshtml
+++ b/SPMS/Areas/Staff/Views/Shared/_Layout.cshtml
@@ -87,7 +87,8 @@
 	<script src="~/assets/js/custom.min.js"></script>
 	<script src="~/assets/js/dlabnav-init.js"></script>
 	<script src="~/assets/js/demo.js"></script>
-	<script src="~/js\loading.js"></script>
+	<script src="~/assets/js/myscripts.js"></script>
+
 	@*<script src="~/assets/js/styleSwitcher.js"></script>*@
 
 
