--- a/SPMS/Views/Shared/_CookieConsentPartial.cshtml
+++ b/SPMS/Views/Shared/_CookieConsentPartial.cshtml
@@ -10,7 +10,7 @@
 {
     <div id="cookieConsent" class="d-flex alert alert-dismissible fade show justify-content-center align-items-center my-3" role="alert">
         <p class="mb-0 px-2">We use cookies to improve your website experience</p>
-        <button type="button" class="accept-policy close btn btn-primary btn-sm ms-2" data-dismiss="alert" aria-label="Close" data-cookie-string="@cookieString">
+        <button type="button" class="accept-policy close btn btn-primary btn-sm ms-2" id="noloader" data-dismiss="alert" aria-label="Close" data-cookie-string="@cookieString">
             <span aria-hidden="true">Ok, thanks</span>
         </button>
     </div>
