--- a/SPMS/Views/Shared/_PagesLayout.cshtml
+++ b/SPMS/Views/Shared/_PagesLayout.cshtml
@@ -29,6 +29,7 @@
     <script src="~/assets/vendor/global/global.min.js"></script>
     <script src="~/assets/js/custom.min.js"></script>
     <script src="~/assets/js/dlabnav-init.js"></script>
+    <script src="~/assets/js/myscripts.js"></script>
     <script>
     // Check that service workers are supported
     if ('serviceWorker' in navigator) {
