--- a/SPMS/Areas/Graduate/Views/Chat/Index.cshtml
+++ b/SPMS/Areas/Graduate/Views/Chat/Index.cshtml
@@ -21,7 +21,7 @@
 											<a href="javascript:void(0);"><i class="fas fa-user-friends"></i></a>
 										</div>
 										<div class="ms-3">
-											<h4 class="fs-20 font-w700">#Room</h4>
+											<h4 class="fs-20 font-w700">#Chat Group</h4>
 											@if (CurrentStudent.Supervisor != null)
 											{
 												<span>@CurrentStudent.Supervisor.FullName Projct Students</span>
@@ -44,7 +44,6 @@
 												<p class="mb-1">
 													<ul id="messagesList"></ul>
 												</p>
-												<span class="fs-12">@DateTime.Now.ToUniversalTime()</span>
 										</div>
 
 									</div>
