--- a/SPMS/Areas/Staff/Views/Notification/Notification.cshtml
+++ b/SPMS/Areas/Staff/Views/Notification/Notification.cshtml
@@ -14,8 +14,8 @@
 	<div class="container-fluid">
 		<div class="row page-titles">
 			<ol class="breadcrumb">
-				<li class="breadcrumb-item active"><a href="javascript:void(0)">Notification</a></li>
-				<li class="breadcrumb-item"><a href="javascript:void(0)">Notify</a></li>
+				<li class="breadcrumb-item active"><a href="javascript:void(0)" id="noloader">Notification</a></li>
+				<li class="breadcrumb-item"><a href="javascript:void(0)" id="noloader">Notify</a></li>
 			</ol>
 		</div>
 		<!-- row -->
