chat should retain messages after refresh

--- a/SPMS/Areas/Graduate/Views/Chat/Index.cshtml
+++ b/SPMS/Areas/Graduate/Views/Chat/Index.cshtml
@@ -24,7 +24,7 @@
 											<h4 class="fs-20 font-w700">#Chat Group</h4>
 											@if (CurrentStudent.Supervisor != null)
 											{
-												<span>@CurrentStudent.Supervisor.FullName Projct Students</span>
+												<span>@CurrentStudent.Supervisor.FullName Project Students</span>
 											}
 										</div>
 									</div>
@@ -54,7 +54,7 @@
 									</div>
 									<div class="input-group-append d-flex justify-content-between flex-wrap">
 										<div>
-										<button type="button" id="sendButton" class="btn btn-primary rounded text-white"><i class="far fa-paper-plane me-2"></i>SEND</button>
+										<button type="button" id="sendButton" class="btn btn-primary rounded text-white"><i class="far fa-paper-plane me-2" id="noloader"></i>SEND</button>
 										</div>
 
 									</div>
