--- a/SPMS/Views/Shared/_Sidebar.cshtml
+++ b/SPMS/Views/Shared/_Sidebar.cshtml
@@ -135,6 +135,7 @@ else if (User.IsInRole("Student"))
                         <li><a asp-controller="dashboard" asp-action="profile">Profile</a></li>
                         <li><a asp-controller="dashboard" asp-action="notify">Notifications</a></li>
                         <li><a asp-controller="chat" asp-action="index">Chat</a></li>
+                        <li><a asp-controller="dashboard" asp-action="complain">Complaint / Observation</a></li>
 
                     </ul>
 
