--- a/SPMS/Areas/Graduate/Views/Chat/Index.cshtml
+++ b/SPMS/Areas/Graduate/Views/Chat/Index.cshtml
@@ -38,9 +38,11 @@
 													<img src="@CurrentStudent.ImageUrl" alt="" class="rounded-circle img-1">
 													<span class="active1"></span>
 												</div>
-											<input type="hidden" id="userInput" value="@CurrentStudent.MatricNo" />
-											}
+											<input type="hidden" id="userInput" value="@CurrentStudent.NameMatric" /> 
+												<hr />
+												<br />
 
+											}
 												<p class="mb-1">
 													<ul id="messagesList"></ul>
 												</p>
