--- a/SPMS/Areas/Graduate/Views/Dashboard/Index.cshtml
+++ b/SPMS/Areas/Graduate/Views/Dashboard/Index.cshtml
@@ -103,7 +103,7 @@
                     <a asp-controller="dashboard" asp-action="profile">
                         <div class="card-body p-4">
                             <div class="media ai-icon">
-                                <span class="me-3 bgl-white text-primary">
+                                <span class="me-3 bgl-white text-white">
                                     <!-- <i class="ti-user"></i> -->
                                     <svg id="icon-customers" xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-user">
                                         <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path>
@@ -125,7 +125,7 @@
           
             <div class="col-xl-3 col-xxl-3 col-sm-6">
                 <div class="card overflow-hidden">
-                    <a asp-controller="dashboard" asp-action="complaint">
+                    <a asp-controller="dashboard" asp-action="complain">
 
                     <div class="social-graph-wrapper widget-linkedin">
                             <span class="s-icon">
