--- a/SPMS/Views/Shared/_NoticePartial.cshtml
+++ b/SPMS/Views/Shared/_NoticePartial.cshtml
@@ -20,7 +20,7 @@
 			<div class="modal-content">
 				<div class="modal-header text-center"> 
 					<h5 class="modal-title">Notice ! &nbsp;Notice ! &nbsp;</h5>
-					<button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+					@*<button type="button" class="btn-close" data-bs-dismiss="modal"></button>*@
 
 				</div>
 				<div class="modal-body">
